apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_prepare_context__outcome_ok.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 418
expression: value
---
{
  "data": {
    "calendar_event_id": "cal-event-abc-123"
  },
  "kind": "ok"
}
