apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_prepare_context__request_empty_attendees.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 394
expression: value
---
{
  "attendees": [],
  "calendar_event_id": "cal-event-empty"
}
