apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_prepare_context__response_ack.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 407
expression: value
---
{
  "calendar_event_id": "cal-event-abc-123"
}
